<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/details"
        android:layout_marginTop="@dimen/details_screen_common_top_margin"
        android:padding="@dimen/list_item_padding"
        android:textSize="@dimen/detail_screen_title_size"
        />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/details_screen_common_top_margin"
        android:padding="@dimen/list_item_padding"
        android:textSize="@dimen/detail_screen_common_text_size"
        android:text="@string/repo_name"
        />
    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/detail_screen_item_padding"
        android:textSize="@dimen/detail_screen_common_text_size"
        android:text="@string/repo_description"
        />

    <TextView
        android:id="@+id/updated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/detail_screen_item_padding"
        android:textSize="@dimen/detail_screen_common_text_size"
        android:text="@string/repo_updated_at"
        />
    <TextView
        android:id="@+id/stargazersCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/detail_screen_item_padding"
        android:padding="@dimen/detail_screen_item_padding"
        android:textSize="@dimen/detail_screen_common_text_size"
        android:text="@string/repo_stargazers_count"
        />
    <TextView
        android:id="@+id/fork"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/detail_screen_item_padding"
        android:padding="@dimen/detail_screen_item_padding"
        android:textSize="@dimen/detail_screen_common_text_size"
        android:text="@string/repo_forks"
        />
    <TextView
        android:id="@+id/totalFork"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/detail_screen_item_padding"
        android:text="@string/repo_total_forks"
        android:padding="@dimen/detail_screen_item_padding"
        android:textSize="@dimen/detail_screen_fork_size"
        />
</LinearLayout>